force-app/main/default/objects/User/fields/Admin_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Admin_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admin Exempt</label>
    <type>Checkbox</type>
</CustomField>