force-app/main/default/objects/User/fields/Admin_Flag__c.field-meta.xml
<CustomField>
    <fullName>Admin_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from User login reports</label>
    <type>Checkbox</type>
</CustomField>