force-app/main/default/objects/User/fields/Admindatatag__c.field-meta.xml
<CustomField>
    <fullName>Admindatatag__c</fullName>
    <label>Admin data tag</label>
    <length>50</length>
    <type>Text</type>
</CustomField>