force-app/main/default/objects/User/fields/Business_Role__c.field-meta.xml
<CustomField>
    <fullName>Business_Role__c</fullName>
    <description>Used to identify what type of role users have; specifically to identify reps from mgmt for contract expiration emails.</description>
    <inlineHelpText>Used to identify what type of role users have; specifically to identify reps from mgmt for contract expiration emails.</inlineHelpText>
    <label>Business Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Non Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>