force-app/main/default/objects/User/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Company__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Care - CEM</fullName>
            </value>
            <value>
                <fullName>Carrier</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Finance&amp;Pricing</fullName>
            </value>
            <value>
                <fullName>iMeetCentral</fullName>
            </value>
            <value>
                <fullName>Information Systems</fullName>
            </value>
            <value>
                <fullName>IST Team</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Major Accounts</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Modality</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
            <value>
                <fullName>ReadyTalk</fullName>
            </value>
            <value>
                <fullName>Sales Engineers</fullName>
            </value>
            <value>
                <fullName>Sales Operations</fullName>
            </value>
            <value>
                <fullName>Service &amp; Care</fullName>
            </value>
            <value>
                <fullName>TalkPoint</fullName>
            </value>
            <value>
                <fullName>Tier One</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>