force-app/main/default/objects/User/fields/Collabspot_User__c.field-meta.xml
<CustomField>
    <fullName>Collabspot_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This to denote that we have purchased a Collabspot Licnse</description>
    <label>Collabspot User</label>
    <type>Checkbox</type>
</CustomField>