force-app/main/default/objects/User/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <inlineHelpText>What company/acquisition does this person work under?</inlineHelpText>
    <label>Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>iMeetCentral</fullName>
            </value>
            <value>
                <fullName>Modality</fullName>
            </value>
            <value>
                <fullName>PGi</fullName>
            </value>
            <value>
                <fullName>Portal User</fullName>
            </value>
            <value>
                <fullName>PowWowNow</fullName>
            </value>
            <value>
                <fullName>ReadyTalk</fullName>
            </value>
            <value>
                <fullName>TalkPoint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>