force-app/main/default/objects/User/fields/Date_for_Next_Report_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Date_for_Next_Report_Trigger__c</fullName>
    <label>Date for Next Report Trigger</label>
    <type>Date</type>
</CustomField>