force-app/main/default/objects/User/fields/Docusign_email_group__c.field-meta.xml
<CustomField>
    <fullName>Docusign_email_group__c</fullName>
    <description>CASE(Channel__c,
&apos;Ent - AAE&apos;, &quot;dsnaaae@pgi.com&quot;,
&apos;SaaS Base&apos;, &quot;dsnabase@pgi.com&quot;,
&apos;E-Commerce&apos;, &quot;dsnaecommerce@pgi.com&quot;,
&quot;Partners&quot;, &quot;dsnapartners@pgi.com&quot;,
&quot;Budget Conferencing&quot;, &quot;dsnabudgetconferencing&quot;,
&quot;dsna_test@pgi.com&quot;
)</description>
    <formula>/*CASE(Channel__c,
&apos;Field Sales&apos;, &quot;dsnabase@pgi.com&quot;, 
&apos;ISO Inbound&apos;, &quot;dsnaecommerce@pgi.com&quot;, 
&quot;Partner&quot;, &quot;dsnapartners@pgi.com&quot;,
&quot;dsna_test@pgi.com&quot;
)
*/
&quot;dsna_test@pgi.com&quot;</formula>
    <label>Docusign email group</label>
    <type>Text</type>
</CustomField>