force-app/main/default/objects/User/fields/Eloqua_User__c.field-meta.xml
<CustomField>
    <fullName>Eloqua_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Eloqua Access in Lead Layouts</description>
    <label>Eloqua Profiler Lead</label>
    <type>Checkbox</type>
</CustomField>