force-app/main/default/objects/User/fields/Email_Support_Alias__c.field-meta.xml
<CustomField>
    <fullName>Email_Support_Alias__c</fullName>
    <description>Used for alias to put in default email template signatures for all Cases Support agents.</description>
    <label>Email Support Alias</label>
    <type>Email</type>
</CustomField>