force-app/main/default/objects/User/fields/Inside_Sales_Staff__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Staff__c</fullName>
    <defaultValue>false</defaultValue>
    <description>VR on license set will prevent non-Inside Sales users from adding Offerings in &quot;BlueBird&quot; Product Family in iContract</description>
    <inlineHelpText>VR on license set will prevent non-Inside Sales users from adding Offerings in &quot;BlueBird&quot; Product Family in iContract</inlineHelpText>
    <label>Inside Sales Staff</label>
    <type>Checkbox</type>
</CustomField>