force-app/main/default/objects/User/fields/Is_Service_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Service_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Service User</label>
    <type>Checkbox</type>
</CustomField>