force-app/main/default/objects/User/fields/isManager1__c.field-meta.xml
<CustomField>
    <fullName>isManager1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should be selected if the user is a first-level manager.  This would be someone with direct reports, but who&#39;s direct reports do not have direct reports.</description>
    <inlineHelpText>Has direct reports, but no direct reports of direct reports.</inlineHelpText>
    <label>isManager1</label>
    <type>Checkbox</type>
</CustomField>