force-app/main/default/objects/User/fields/IsServiceUser__c.field-meta.xml
<CustomField>
    <fullName>IsServiceUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>auto checks from a trigger if the user has &quot;Service Cloud User&quot; feature set as TRUE</description>
    <label>Is Service User</label>
    <type>Checkbox</type>
</CustomField>