force-app/main/default/objects/User/fields/KeyForContract__c.field-meta.xml
<CustomField>
    <fullName>KeyForContract__c</fullName>
    <description>1 - PGi
2 - Budget Conferencing
3 - TBD
4 - TBD</description>
    <label>KeyForContract</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>