force-app/main/default/objects/User/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Repurposed the Location field to house Management Level Reports.   Currently used for the SVP layer in Enterprise and Partners channels only, but could be expanded as needed.</description>
    <label>Management Level Report</label>
    <length>50</length>
    <type>Text</type>
</CustomField>