force-app/main/default/objects/User/fields/Manager_x2__c.field-meta.xml
<CustomField>
    <fullName>Manager_x2__c</fullName>
    <formula>Manager.Manager.FirstName + &quot; &quot; + Manager.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mgr&apos;s Manager</label>
    <type>Text</type>
</CustomField>