force-app/main/default/objects/User/fields/Override_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Override_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used exclusively to give users the ability to override validation rules by having this checked.  Also is built into every validation rule that shouldnt affect end users.</description>
    <inlineHelpText>Do not check this box for any users who are not admins</inlineHelpText>
    <label>Override Validation Rules</label>
    <type>Checkbox</type>
</CustomField>