force-app/main/default/objects/User/fields/PGI_Renewal_Owner__c.field-meta.xml
<CustomField>
    <fullName>PGI_Renewal_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only 1 active user should have this set to true.</description>
    <inlineHelpText>Only 1 active user should have this set to true.</inlineHelpText>
    <label>PGI Renewal Owner</label>
    <type>Checkbox</type>
</CustomField>