force-app/main/default/objects/User/fields/Professional_Services_Target__c.field-meta.xml
<CustomField>
    <fullName>Professional_Services_Target__c</fullName>
    <label>Professional Services Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>