force-app/main/default/objects/User/fields/Profile_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name_Text__c</fullName>
    <formula>Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Name (Text)</label>
    <type>Text</type>
</CustomField>