force-app/main/default/objects/User/fields/ReadyTalk_Exempt__c.field-meta.xml
<CustomField>
    <fullName>ReadyTalk_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ReadyTalk Exempt</label>
    <type>Checkbox</type>
</CustomField>