force-app/main/default/objects/User/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
    <label>DB Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
                <color>#009900</color>
                <label>NA</label>
            </value>
            <value>
                <fullName>EMEA</fullName>
                <color>#3333FF</color>
                <label>EMEA</label>
            </value>
            <value>
                <fullName>APAC</fullName>
                <color>#CC6600</color>
                <label>APAC</label>
            </value>
            <value>
                <fullName>LA</fullName>
                <color>#990000</color>
                <label>LA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>