force-app/main/default/objects/User/fields/RT_User_Id__c.field-meta.xml
<CustomField>
    <fullName>RT_User_Id__c</fullName>
    <externalId>true</externalId>
    <label>RT User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>