force-app/main/default/objects/User/fields/RVP__c.field-meta.xml
<CustomField>
    <fullName>RVP__c</fullName>
    <label>RVP</label>
    <relationshipName>RVP</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>