force-app/main/default/objects/User/fields/Sales_Ops_User__c.field-meta.xml
<CustomField>
    <fullName>Sales_Ops_User__c</fullName>
    <description>Sales Ops User</description>
    <label>Sales Ops User</label>
    <relationshipName>SalesOpsUser</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>