force-app/main/default/objects/User/fields/SVP__c.field-meta.xml
<CustomField>
    <fullName>SVP__c</fullName>
    <label>SVP</label>
    <relationshipName>SVP</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>