force-app/main/default/objects/User/fields/TalkPoint_User_ID__c.field-meta.xml
<CustomField>
    <fullName>TalkPoint_User_ID__c</fullName>
    <externalId>true</externalId>
    <label>TalkPoint User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>