force-app/main/default/objects/User/fields/Team_Id_s__c.field-meta.xml
<CustomField>
    <fullName>Team_Id_s__c</fullName>
    <description>will show all Id&apos;s of this user, the user&apos;s manager, the manager&apos;s manager, and so forth up to 7 levels.</description>
    <label>Team Id&apos;s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>