force-app/main/default/objects/User/fields/TESLA_SALESMANAGER_ID__c.field-meta.xml
<CustomField>
    <fullName>TESLA_SALESMANAGER_ID__c</fullName>
    <label>TESLA SALESMANAGER ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>