force-app/main/default/objects/User/fields/TESLA_SalesRep_Email__c.field-meta.xml
<CustomField>
    <fullName>TESLA_SalesRep_Email__c</fullName>
    <label>TESLA SalesRep Email</label>
    <type>Email</type>
</CustomField>