force-app/main/default/objects/User/fields/User_Region__c.field-meta.xml
<CustomField>
    <fullName>User_Region__c</fullName>
    <label>User Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>