force-app/main/default/objects/User/fields/UTC_DSL__c.field-meta.xml
<CustomField>
    <fullName>UTC_DSL__c</fullName>
    <defaultValue>0</defaultValue>
    <label>UTC DSL</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>