force-app/main/default/objects/User/fields/WebMeeting_User__c.field-meta.xml
<CustomField>
    <fullName>WebMeeting_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the user has access to the full functionality in the Web Meeting application.</description>
    <inlineHelpText>Indicates the user has access to the full functionality in the Web Meeting application.</inlineHelpText>
    <label>Web Meeting User</label>
    <type>Checkbox</type>
</CustomField>