force-app/main/default/objects/User/fields/WebMeetingAdministrator__c.field-meta.xml
<CustomField>
    <fullName>WebMeetingAdministrator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the user is allowed to perform administrative functions in the Web Meeting application</description>
    <inlineHelpText>Indicates the user is allowed to perform administrative functions in the Web Meeting application</inlineHelpText>
    <label>Web Meeting Administrator</label>
    <type>Checkbox</type>
</CustomField>