force-app/main/default/objects/User/fields/X3rd_Party_Target__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Target__c</fullName>
    <label>3rd Party Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>