force-app/main/default/objects/User/fields/Yearly_Target__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Target__c</fullName>
    <formula>X3rd_Party_Target__c  +  Dev_Product_Target__c  +  Professional_Services_Target__c +  Support_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yearly Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>