force-app/main/default/objects/User/validationRules/ALL_Employee_Number_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>ALL_Employee_Number_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 IsActive = True, 
 ISBLANK(EmployeeNumber ))</errorConditionFormula>
    <errorDisplayField>EmployeeNumber</errorDisplayField>
    <errorMessage>Employee Number Required</errorMessage>
</ValidationRule>