force-app/main/default/objects/User/validationRules/ALL_Ensure_no_x_on_last_name_of_active.validationRule-meta.xml
<ValidationRule>
    <fullName>ALL_Ensure_no_x_on_last_name_of_active</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
BEGINS( LastName , &quot;x-&quot;),
! IsActive = False
)</errorConditionFormula>
    <errorDisplayField>IsActive</errorDisplayField>
    <errorMessage>Please set this user to be inactive when the last name contains &quot;x-&quot;</errorMessage>
</ValidationRule>