force-app/main/default/objects/User/validationRules/ALL_Only_Admins_Can_Create_Users.validationRule-meta.xml
<ValidationRule>
    <fullName>ALL_Only_Admins_Can_Create_Users</fullName>
    <active>true</active>
    <description>Ensures that only admins are creating new users</description>
    <errorConditionFormula>AND(
ISNEW(),
$User.Profile_Name_Text__c &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>Only System Administrators are allowed to create new users.</errorMessage>
</ValidationRule>