force-app/main/default/objects/User/validationRules/ALL_Only_Admins_Can_Deactivate_Users.validationRule-meta.xml
<ValidationRule>
    <fullName>ALL_Only_Admins_Can_Deactivate_Users</fullName>
    <active>true</active>
    <description>Blocks any user who is not a system admin from deactivating users</description>
    <errorConditionFormula>AND(
IsActive = False,
PRIORVALUE(IsActive) = TRUE,
$User.Profile_Name_Text__c &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>Only System Administrators can deactivate a user</errorMessage>
</ValidationRule>