force-app/main/default/objects/User/validationRules/ALL_PGi_Integration_User_Cant_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>ALL_PGi_Integration_User_Cant_Change</fullName>
    <active>true</active>
    <errorConditionFormula>/* DO NOT ever add the override validation rule*/
OR( 
	AND( 
		OR( ISCHANGED(FirstName), ISCHANGED(LastName) ),
		OR( 
			AND( UPPER( PRIORVALUE(FirstName) ) = &quot;PGI&quot;, UPPER( PRIORVALUE(LastName) ) = &quot;INTEGRATION&quot; ), 
			AND( UPPER(FirstName) = &quot;PGI&quot;,	UPPER(LastName) = &quot;INTEGRATION&quot; )
		) 
	), 
	AND( 
		ISNEW() , 
		AND( UPPER(FirstName) = &quot;PGI&quot;,	UPPER(LastName) = &quot;INTEGRATION&quot; )
	) ,
AND(
                    ISCHANGED(Username),
                    LOWER(PRIORVALUE(Username)) = &quot;pgiintegration@pgi.com&quot;
)
)</errorConditionFormula>
    <errorMessage>User&#39;s name or Username cannot be changed.</errorMessage>
</ValidationRule>