force-app/main/default/objects/User/validationRules/ALL_Place_x_for_deactivated_users.validationRule-meta.xml
<ValidationRule>
    <fullName>ALL_Place_x_for_deactivated_users</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
            !   BEGINS( LastName  , &quot;x-&quot;),
            IsActive = False
)</errorConditionFormula>
    <errorDisplayField>LastName</errorDisplayField>
    <errorMessage>Please set the last name to start with &quot;x-&quot; before trying to deactivate a user.  e.g. Blue Pulaski should be Blue x-Pulaski.</errorMessage>
</ValidationRule>