force-app/main/default/objects/User/validationRules/ALL_Sales_users_require_Manager.validationRule-meta.xml
<ValidationRule>
    <fullName>ALL_Sales_users_require_Manager</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
           CONTAINS( Profile.Name , &quot;sales&quot;),
           ISNULL(ManagerId)
)</errorConditionFormula>
    <errorDisplayField>ManagerId</errorDisplayField>
    <errorMessage>Please select a manager for this user before you can save.</errorMessage>
</ValidationRule>