force-app/main/default/objects/User/listViews/Active_Inactive_Users.listView-meta.xml
<ListView>
    <fullName>Active_Inactive_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Location__c</columns>
    <columns>Channel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>startsWith</operation>
        <value>x-</value>
    </filters>
    <label>Active Inactive Users</label>
    <language>en_US</language>
</ListView>