force-app/main/default/objects/User/listViews/All_Active_EMEA_Users.listView-meta.xml
<ListView>
    <fullName>All_Active_EMEA_Users</fullName>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Location__c</columns>
    <columns>Channel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>User_Region__c</field>
        <operation>equals</operation>
        <value>EMEA</value>
    </filters>
    <label>All Active EMEA Users</label>
    <language>en_US</language>
</ListView>