force-app/main/default/objects/User/listViews/All_Active_Finance_Users.listView-meta.xml
<ListView>
    <fullName>All_Active_Finance_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>Channel__c</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Location__c</columns>
    <columns>SFDC_18_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>Finance,Contract</value>
    </filters>
    <label>All Active Finance Users</label>
    <language>en_US</language>
</ListView>