force-app/main/default/objects/User/listViews/All_Active_Never_Logged_in_Non_ADM_Users.listView-meta.xml
<ListView>
    <fullName>All_Active_Never_Logged_in_Non_ADM_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Location__c</columns>
    <columns>Channel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_LOGIN</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>notContain</operation>
        <value>ADM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>notEqual</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <filters>
        <field>Admin_Flag__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Active Never Logged in Non-ADM Users</label>
    <language>en_US</language>
</ListView>