force-app/main/default/objects/User/listViews/All_Active_PGi_Users_core_care.listView-meta.xml
<ListView>
    <fullName>All_Active_PGi_Users_core_care</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>Channel__c</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>Location__c</columns>
    <columns>SFDC_18_ID__c</columns>
    <columns>CORE.USERS.COMMUNITY_NICKNAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Channel__c</field>
        <operation>equals</operation>
        <value>Service &amp; Care</value>
    </filters>
    <label>All Active PGi Users (core care)</label>
    <language>en_US</language>
</ListView>